# SomeNumericalMath

./: .gitignore  CMakeLists.txt  LICENSE  README.md
tp01_polynomes/: a.out  main.cpp  monome.cpp  polynome.cpp  test.cpp
tp02_vector_dyn/: a.out  main.cpp  test_struct.cpp  vector_dyn.hpp
tp03_matrices_dyn/: a.out  matrice.cpp  matrice.hpp  matrix.cpp  matrix.hpp
tp08_newton_algo/: algo_newton.h
tp09_Newton_Interpo/: interpol.cpp  interpol.hpp  main.cpp
tp1/: main.cpp  monome.cpp  polynome.cpp
tp10_step_func/: StepFunction.cpp  StepFunction.hpp  main.cpp
tp11_suite_cycliques/: main.cpp  suite.hpp
tp1_polynomes/: polynome.cpp
tp2/: main.cpp  vector_dyn.cpp  vector_dyn.hpp
tp2_vector_dyn/: main.cpp
