cmake_minimum_required(VERSION 2.8.9)
project(tps)
set(CMAKE_CXX_STANDARD 17)
add_executable(tp10_step_func tp10_step_func/main.cpp tp10_step_func/StepFunction.hpp tp10_step_func/StepFunction.cpp)
add_executable(tp09_Newton_Interpo tp09_Newton_Interpo/main.cpp tp09_Newton_Interpo/interpol.hpp tp09_Newton_Interpo/interpol.cpp)
add_executable(tp03_matrices_dyn tp03_matrices_dyn/matrice.hpp tp03_matrices_dyn/matrice.cpp)
add_executable(tp02_vector_dyn tp02_vector_dyn/main.cpp tp02_vector_dyn/vector_dyn.hpp tp02_vector_dyn/vector_dyn.cpp)